WEB-2243 Fixed alignment of datepicker image

--- a/fid-web/src/main/webapp/style/newCss/event/event_base.css
+++ b/fid-web/src/main/webapp/style/newCss/event/event_base.css
@@ -128,6 +128,7 @@ textarea.comments {
 .jumpto img {
 	padding-bottom: 2px;
 	padding-right: 2px;
+	vertical-align: text-bottom;
 }
 
 .youAreOn, .eventSectionIndex {
@@ -413,4 +414,8 @@ h2 span.formTitle {
 
 .assetSummary h2 {
     overflow:hidden;
+}
+
+span.fieldHolder img {
+	vertical-align:text-bottom;
 }
